--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,13 @@
       <span>/</span>
       <a href="{{ site.baseurl }}/" class="text-brand-purple cursor-pointer hover:underline">Blog</a>
     </nav>
-    <!-- <button
-      class="bg-brand-purple hover:bg-brand-dark text-white px-6 py-2.5 rounded-xl font-bold text-sm tracking-wide shadow-[0px_4px_0px_0px_rgba(76,29,149,1)] hover:translate-y-[2px] hover:shadow-[0px_2px_0px_0px_rgba(76,29,149,1)]">
-      APOIAR
-    </button> -->
+
+    <div class="flex items-center gap-4">
+      <a href="{{ site.repository }}" target="_blank"
+        class="group inline-flex items-center gap-2 text-gray-400 hover:text-brand-light transition-colors px-3 py-2.5">
+        <i data-lucide="github" class="w-5 h-5"></i>
+        <span class="text-xs font-semibold uppercase tracking-widest">Open Source</span>
+      </a>
+    </div>
   </div>
 </header>
